--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Capoverde/MYSITE#readme",
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
